upgraded searching